--- a/04-CSS-Layouts/challenge/index.html
+++ b/04-CSS-Layouts/challenge/index.html
@@ -12,8 +12,10 @@
         <div class="prodect">
             <img class="prodect-image" src="imgs/challenges.jpg" alt="shoot for a converse shoes" width="250px" height="250px" />
             <div class="prodect-hights">
-                <p><strong class="price">$65.00</strong></p>
-                <p class="shipping">Free shipping</p>
+                <div class="prodect-total-price">
+                    <p><strong class="price">$65.00</strong></p>
+                    <p class="shipping">Free shipping</p>
+                </div>
                 <p class="info">Ready to sress up or down, these classic classic Chuks are an everday wardrope staple.</p>
                 <a href="#">More ingormation&rarr;</a>
                 <div class="colors">
