uptade the projects with CSS Grid layout

--- a/04-CSS-Layouts/challenge/index.html
+++ b/04-CSS-Layouts/challenge/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Converse Chuck Taylor All Star Low Top </h2>
-        <div class="prodect">
+        <!-- <div class="prodect"> -->
             <img class="prodect-image" src="imgs/challenges.jpg" alt="shoot for a converse shoes" width="250px" height="250px" />
             <div class="prodect-hights">
                 <div class="prodect-total-price">
@@ -35,7 +35,7 @@
                     <li>Iconic chuck Taylor unkle putch.</li>
                 </ul>
             </div>
-        </div>
+        <!-- </div> -->
         <button>Add to cart</button>
     </div>
 </body>
